--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,11 +22,11 @@
     <string name="add_book_text">Добавить!</string>
     <string name="add_book_fragment_book_name">Название книги</string>
     <string name="user_login">ЛОГИН</string>
-    <string name="user_password">ПАРОЛЬ</string>
+    <string name="user_password">Пароль</string>
     <string name="registration_button">Регистрация</string>
-    <string name="user_email">ПОЧТА</string>
-    <string name="telegram_account">ТЕЛЕГРАМ АККАУНТ</string>
-    <string name="user_instagram">ИНСТАГРАМ АККАУНТ</string>
+    <string name="user_email">Email</string>
+    <string name="telegram_account">Telegram</string>
+    <string name="user_instagram">Instagram</string>
     <string name="btn_logout">Выйти</string>
     <string name="btn_login">Войти</string>
     <string name="create_account">Создать аккаунт</string>
