Add upload image func

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,15 +18,15 @@
     <string name="instagram_placeholder">Instagram: @Test</string>
     <string name="telegram_placeholder">Telegram: @Test</string>
     <string name="add_book">Добавить</string>
-    <string name="book_image">фото книги</string>
+    <string name="book_image">фото</string>
     <string name="add_book_text">Добавить!</string>
     <string name="add_book_fragment_book_name">Название книги</string>
     <string name="user_login">ЛОГИН</string>
     <string name="user_password">Пароль</string>
     <string name="registration_button">Регистрация</string>
     <string name="user_email">Email</string>
-    <string name="telegram_account">Telegram</string>
-    <string name="user_instagram">Instagram</string>
+    <string name="user_telega">Telegram</string>
+    <string name="user_insta">Instagram</string>
     <string name="btn_logout">Выйти</string>
     <string name="btn_login">Войти</string>
     <string name="create_account">Создать аккаунт</string>
