--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="btn_login">Войти</string>
     <string name="create_account">Создать аккаунт</string>
     <string name="user_account">АККАУНТ</string>
+    <string name="book_lover_hub">HUB</string>
 </resources>
